--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -31,7 +31,20 @@
                 <div>
 
                 </div>
-                <button type="submit" class="btn btn-warning btn-sm">Acceder</button>
+                <div class="col-md-12">
+                   
+                
+                  <div class="col-md-6">
+
+                    <button type="submit" class="btn btn-warning btn-sm">Acceder</button>
+                  </div>
+                  <div class="col-md-6">
+
+                    <a href="#!/signin" class="text-info">Crear cuenta</a>
+                  </div>
+
+                </div>
+               
             </form>
 
 
