--- a/app/views/recover.html
+++ b/app/views/recover.html
@@ -3,7 +3,7 @@
   body {
     height: 100%;
     background-color: white;
-       font-family: 'Calibri';
+    font-family: 'Calibri';
   }
 
 </style>
@@ -36,124 +36,51 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
-<div class="col-md-12" ng-if="$ctrl.showcapturaserie">
-  <h3 class="text-center text-primary"><b>Crea tu cuenta de Star TV</b></h3>
-
-  <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-    <h3 class="" style="font-family: 'Roboto', sans-serif;"> Ingresa la serie del aparato principal (Internet, Television, Bundle) </h3>
-    <div class="col-md-8">
-      <input type="text" class="form-control" placeholder="Ingresa aqui el número de serie" ng-model="$ctrl.serie">
-      <br>
-      <div class="alert alert-info" role="alert">
-        <i class="fa fa-info-circle" aria-hidden="true"></i> Si necesitas ayuda para saber la ubicación de la serie y el
-        tipo de aparato puedes consultarla aquí
-        <a href="#" class="alert-link">Ayuda</a>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <button class="btn btn-warning btn-block " ng-click="$ctrl.confirmar()"> Aceptar</button>
-    </div>
-  </div>
-</div>
-
-
-<div class="col-md-12  " ng-if="$ctrl.showinfo">
-
-  <div class="col-md-8 card col-md-offset-2 col-sm-8 col-sm-offset-2">
-    <div class="row" style="background:gree; padding: 10px;">
-      <div class="col-md-3">
-        <img src="images/startvblack.svg" width="100" height="100">
-      </div>
-      <div class="col-md-9">
-        <h3 style="color: white"><b>¡Bienvenido sus datos han sido validados! </b></h3>
-      </div>
-    </div>
-
-
-    <div class="card-body">
-
-     <div class="col-md-12">
-      <div class="col-md-6" style="margin-top: 50px;">
-        <h3><b>Cliente: {{$ctrl.user.Cliente}}</b></h3>
-        <h4>No.Contrato: {{$ctrl.user.ContratoCompuesto}}</h4>
-        <h3>No.serie: {{$ctrl.serie}}</h3>
-
-      </div>
-      <div class="col-md-6">
-        <p class="text-muted">Ingresa el correo electrónico con el que accesarás a este sitio </p>
-
-        <div class="row form-group">
-          <input type="email" class="form-control" placeholder="Ingresa tu correo electrónico" ng-model="$ctrl.email">
-          <p class="help-block">Te enviaremos un correo a esta cuenta una vez finalizado el registro</p>
-        </div>
-        <div class="row form-group">
-          <input type="password" class="form-control" placeholder="Ingresa tu contraseña" ng-model="$ctrl.password">
-          <p class="help-block">Asegurate que tu contraseña contenga letras y números</p>
-        </div>
-        <div class="row form-group">
-          <input type="password" class="form-control" placeholder="Valida tu contraseña">
-        </div>
-          <div class="col-md-12 form-group">
-          <button class="btn btn-warning btn-block" ng-click="$ctrl.Registrar()"> Registrar </button>
-        </div>
-
-      </div>
-     </div>
-
+<div class="col-md-12" ng-if="$ctrl.showvalidationform">
+  <form class="login-form" angular-validator-submit="$ctrl.validar()" autocomplete="off" name="myForm" novalidate angular-validator>
+    <h3 class="text-center text-primary"><b>Recupera tu contraseña</b></h3>
+    <h3 class=" text-center">Ingresa la siguiente información para poder reestablecer tu contraseña</h3>
+    <br>
+    <div class="col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2">
 
       <div class="col-md-12">
-        <div class="alert alert-warning text-center" role="alert">
-
-          <h5>¿No reconoces esta información?,<a class="alert-link" href="#">Intenta ingresando otra serie</a></h5>
-          <h6> Atención a clientes:01 800 700 STAR (7827)</h6>
-        </div>
-
+        <label><b> Ingresa tu email</b></label>
+        <input type="text" name="email" class="form-control" placeholder="Ingresa aquí el tu email" validate-on="dirty" required-message="'El email es es obligatorio.'"
+          required ng-model="$ctrl.email">
       </div>
-
+      <div class="col-md-12">
+        <label><b> Ingresa la serie del aparato principal</b></label>
+        <input name="serie" type="text" class="form-control" placeholder="Ingresa aquí el número de serie" validate-on="dirty" required-message="'La serie es obligatoria.'"
+          required ng-model="$ctrl.serie">
+      </div>
+      <br>
+      <div class="col-md-12">
+        <div class="alert alert-info" role="alert">
+          <i class="fa fa-info-circle" aria-hidden="true"></i> Si necesitas ayuda para saber la ubicación de la serie y el
+          tipo de aparato puedes consultarla aquí
+          <a href="#" class="alert-link">Ayuda</a>
+        </div>
+      </div>
+      <div class="col-md-12 text-right">
+        <button class="btn btn-warning " ng-click="$ctrl.confirmar()"> Aceptar</button>
+      </div>
     </div>
 
+  </form>
+</div>
 
-
-
-  </div>
+<div class="col-md--12" ng-if="$ctrl.showresetform">
+   <div class="col-md-5 col-md-offset-4 col-sm-5 col-sm-offset-4">
+  <h3 class=" text-center">Proceso de reestablecimiento de  contraseña</h3>
+  <form class="login-form" angular-validator-submit="$ctrl.reset()" autocomplete="off" name="myForm" novalidate angular-validator>
+    <div class="alert alert-success" role="alert"><b>¡Correcto!</b> la validación se hizo correctamente,ahora puedes elegir una nueva contraseña y modificar tu correo
+      con el que puedes accesar al sistema</div>
+  </form>
+   </div>
+</div>
 
 </div>
 
-<!--    <h5>Selecciona el servicio que tienes instalado</h5>
-
-    <div class="col-md-6">
-      <h1>Televisón Digital</h1>
-    </div>
-
-    <div class="col-md-6">
-      <h1>Internet y Bundle</h1>
-    </div>-->
 
 
-<!-- <div class="col-md-3">
-    <div class="thumbnail">
-      <img src="images/Captura2.PNG" alt="...">
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
-    </div>
-
-  </div>
-
-
-
-  <div class="col-md-3">
-    <div class="thumbnail">
-      <img src="images/Captura1.PNG" alt="...">
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
-    </div>
-
-  </div>-->
 </div>
