--- a/app/views/recover.html
+++ b/app/views/recover.html
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <img src="images/startv.png" width="50" height="50">
+      <img src="images/startv.png" width="50" height="40">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,9 +39,9 @@
 <div class="col-md-12" ng-if="$ctrl.showvalidationform">
   <form class="login-form" angular-validator-submit="$ctrl.validar()" autocomplete="off" name="myForm" novalidate angular-validator>
     <h3 class="text-center text-primary"><b>Recupera tu contraseña</b></h3>
-    <h3 class=" text-center">Ingresa la siguiente información para poder reestablecer tu contraseña</h3>
+    <h4 class=" text-center">Ingresa la siguiente información para poder reestablecer tu contraseña</h4>
     <br>
-    <div class="col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2">
+    <div class="col-md-5 col-md-offset-4 col-sm-5 col-sm-offset-4">
 
       <div class="col-md-12">
         <label><b> Ingresa tu email</b></label>
@@ -49,34 +49,92 @@
           required ng-model="$ctrl.email">
       </div>
       <div class="col-md-12">
+        <br>
         <label><b> Ingresa la serie del aparato principal</b></label>
         <input name="serie" type="text" class="form-control" placeholder="Ingresa aquí el número de serie" validate-on="dirty" required-message="'La serie es obligatoria.'"
           required ng-model="$ctrl.serie">
       </div>
+       <div class="col-md-6 col-md-offset-6 text-right">
+         <br>
+        <button class="btn btn-warning btn-block " ng-click="$ctrl.confirmar()"> Aceptar</button>
+      </div>
       <br>
       <div class="col-md-12">
+        <br>
         <div class="alert alert-info" role="alert">
           <i class="fa fa-info-circle" aria-hidden="true"></i> Si necesitas ayuda para saber la ubicación de la serie y el
           tipo de aparato puedes consultarla aquí
           <a href="#" class="alert-link">Ayuda</a>
         </div>
       </div>
-      <div class="col-md-12 text-right">
-        <button class="btn btn-warning " ng-click="$ctrl.confirmar()"> Aceptar</button>
-      </div>
+     
     </div>
 
   </form>
 </div>
 
 <div class="col-md--12" ng-if="$ctrl.showresetform">
-   <div class="col-md-5 col-md-offset-4 col-sm-5 col-sm-offset-4">
-  <h3 class=" text-center">Proceso de reestablecimiento de  contraseña</h3>
-  <form class="login-form" angular-validator-submit="$ctrl.reset()" autocomplete="off" name="myForm" novalidate angular-validator>
-    <div class="alert alert-success" role="alert"><b>¡Correcto!</b> la validación se hizo correctamente,ahora puedes elegir una nueva contraseña y modificar tu correo
-      con el que puedes accesar al sistema</div>
-  </form>
-   </div>
+  <div class="col-md-5 col-md-offset-4 col-sm-5 col-sm-offset-4">
+    <h3 class=" text-center">Proceso de reestablecimiento de contraseña</h3>
+    <!--   angular-validator-submit="$ctrl.reset()"-->
+    <!--  novalidate angular-validator-->
+    <form class="login-form" autocomplete="off" name="form" ng-submit="$ctrl.reset()">
+      <div class="alert alert-success" role="alert"><b>¡Correcto!</b> la validación se hizo correctamente,ahora puedes elegir una nueva contraseña y modificar tu correo
+        con el que puedes accesar al sistema</div>
+
+      <div class="col-md-12">
+        <label>Correo electrónico actual</label>
+        <input type="email" class="form-control" name="correoactual"
+         class="form-control"        
+          required ng-model="$ctrl.email">
+
+          <p class="text-help text-danger"><b>¡ Atención !</b> este es el correo de acceso al sistema, al modificarlo tendras que acceder con el nuevo correo registrado </p>
+           <span class="text-danger"  ng-show="!form.correoactual.$valid"> ¡No es un correo valido!</span>
+      </div>
+
+      <div class="col-md-12">
+        <br>
+        <label>Nueva Contraseña</label>
+        <input type="password" 
+         class="form-control" pattern=".{6,}"
+          required-message="'la contraseña es obligatoria y tiene que tener un minimo de 6 caracteres'"
+          required name="nuepass" ng-model="$ctrl.nuepass">
+
+      </div>
+    
+      <div class="col-md-12">
+        <br>
+        <div class="form-group" ng-class="{ 'has-error': form.valpass.$invalid && !form.valpass.$pristine }">
+          <label for="confirm-password">Confirma contraseña</label>
+          <input type="password" name="valpass" id="confirm-password"
+          pattern=".{6,}"
+           class="form-control" ng-model="$ctrl.valpass" required
+           match="$ctrl.nuepass"
+          
+          />
+          <span class="text-danger" ng-if="$ctrl.nuepass !== $ctrl.valpass" ng-show="form.valpass.$dirty"> La contraseña no coincide</span>
+        </div>
+      </div>   
+    
+      <div class="col-md-12">
+
+        <div
+                vc-recaptcha
+                theme="'light'"
+                key="$ctrl.captcha.key"
+                on-create="$ctrl.setWidgetId(widgetId)"
+                on-success="$ctrl.setResponse(response)"
+                on-expire="$ctrl.cbExpiration()"
+            ></div>
+      </div>
+
+      <div class="col-md-12">
+        <br>       
+        <button type="submit" ng-disabled="!form.$valid  ||  $ctrl.captcharesponse ==null" class="btn btn-warning btn-block">Cambiar mis datos de acceso</button>
+        <p class="text-muted text-center">(Al aceptar et enviaremos un correo con tus nuevas credenciales de acceso)</p>
+      </div>
+    </form>
+  </div>
 </div>
 
 </div>
