--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -16,7 +16,7 @@
     <form class="login-form" angular-validator-submit="$ctrl.login()" autocomplete="off" name="myForm" novalidate angular-validator>
       <div class="col-md-12">
 
-        <h3 class="text-info text-center" style="color: #ffc526;">Accesa al sistema</h3>
+        <h3 class="text-info text-center" style="color: #ffc526;">Accesa al sistema bla bla vla</h3>
         <p class="text-muted text-center">Ingresa tu usuario y contraseña proporcionado</p>
 
 
